<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RemoteControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/mode_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btn_mode_photo"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/mode_photo"
                    android:text="@string/mode_photo"
                    app:icon="@drawable/ic_baseline_photo_camera_24" />

                <Button
                    android:id="@+id/btn_mode_video"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/mode_video"
                    android:text="@string/mode_video"
                    app:icon="@drawable/ic_baseline_videocam_24" />

                <Button
                    android:id="@+id/btn_mode_looping_video"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/mode_looping_video"
                    app:icon="@drawable/ic_looping_video" />

                <Button
                    android:id="@+id/btn_mode_time_lapse"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/mode_time_lapse"
                    app:icon="@drawable/ic_time_lapse" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/looping_video_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/looping_video_time" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/looping_video_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btn_looping_5_min"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/looping_video_5min" />

                <Button
                    android:id="@+id/btn_looping_30_min"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/looping_video_30min" />

                <Button
                    android:id="@+id/btn_looping_60_min"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/looping_video_60min" />

                <Button
                    android:id="@+id/btn_looping_max"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/looping_video_max" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_capture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_take_photo" />

        <TextView
            android:id="@+id/camera_settings_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="auto"
            android:gravity="center_vertical"
            android:text="@string/camera_settings"
            android:textColor="?android:attr/textColorPrimary"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_up_24" />

        <LinearLayout
            android:id="@+id/camera_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/led_switch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/led_indicators"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/timer" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/timer_toggle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btn_timer_off"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timer_off" />

                <Button
                    android:id="@+id/btn_timer_2_sec"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timer_2s" />

                <Button
                    android:id="@+id/btn_timer_5_sec"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timer_5s" />

                <Button
                    android:id="@+id/btn_timer_10_sec"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timer_10s" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/beep_volume" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/beep_toggle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btn_beep_off"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beep_off" />

                <Button
                    android:id="@+id/btn_beep_low"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beep_low" />

                <Button
                    android:id="@+id/btn_beep_mid"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beep_mid" />

                <Button
                    android:id="@+id/btn_beep_high"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beep_high" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/auto_power_off" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/power_toggle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btn_power_1_min"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_power_off_1min" />

                <Button
                    android:id="@+id/btn_power_3_min"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_power_off_3min" />

                <Button
                    android:id="@+id/btn_power_5_min"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_power_off_5min" />

                <Button
                    android:id="@+id/btn_power_30_min"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_power_off_30min" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>
    </LinearLayout>

</ScrollView>